fix issue with modal background being too big

--- a/src/app/components/refine-selection/refine-selection.component.scss
+++ b/src/app/components/refine-selection/refine-selection.component.scss
@@ -6,6 +6,7 @@
 }
 
 .background {
+  box-sizing: border-box;
   background-color: black;
   opacity: .5;
   position: absolute;
